<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Deprecated" >

    <Button
        android:id="@+id/ButtonT2"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_x="435dp"
        android:layout_y="10dp"
        android:text="@string/STOP"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <Button
        android:id="@+id/buttonT1"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_x="273dp"
        android:layout_y="9dp"
        android:text="@string/START"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <Button
        android:id="@+id/ButtonT3"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_x="320dp"
        android:layout_y="126dp"
        android:text="@string/AUTOMATED"
        android:textSize="@dimen/abc_dialog_padding_material" />

    <EditText
        android:id="@+id/editTextT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="271dp"
        android:layout_y="261dp"
        android:ems="10"
        android:hint="Watts"
        android:imeActionLabel="Set Watt Power"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/ButtonT4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="506dp"
        android:layout_y="258dp"
        android:text="@string/SW" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_x="10dp"
        android:layout_y="10dp"
        android:background="@drawable/ntitled" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190dp"
        android:layout_height="170dp"
        android:layout_x="15dp"
        android:layout_y="15dp"
        android:background="@drawable/ntitled1" />

    <TextView
        android:id="@+id/textViewT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="72dp"
        android:layout_y="159dp"
        android:text="0%"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="72dp"
        android:layout_y="34dp" />

</AbsoluteLayout>